--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,36 @@
+atomicwrites==1.4.0
+attrs==20.3.0
+bleach==3.3.0
 build==0.3.1.post1
+certifi==2020.12.5
+chardet==4.0.0
+colorama==0.4.4
+docutils==0.16
+idna==2.10
+importlib-metadata==3.7.3
+iniconfig==1.1.1
+keyring==23.0.1
+packaging==20.9
+pep517==0.10.0
+pkginfo==1.7.0
+pluggy==0.13.1
+py==1.10.0
+Pygments==2.8.1
+pyparsing==2.4.7
+PySide2==5.15.2
+pytest==6.2.2
+pytest-qt==3.3.0
+pywin32-ctypes==0.2.0
+-e git+git@github.com:DaelonSuzuka/qtstrap.git@eab0bf7c5d85b15e78aa4a6ce178096a9b28abf6#egg=qtstrap
+readme-renderer==29.0
+requests==2.25.1
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
+shiboken2==5.15.2
+six==1.15.0
+toml==0.10.2
+tqdm==4.59.0
 twine==3.4.1
+urllib3==1.26.4
+webencodings==0.5.1
+zipp==3.4.1
