--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: qtstrap
-site_description: 'qtstrap docs'
+site_description: 'Like Bootstrap, but Qt-er!'
 site_author: 'David Kincaid'
 docs_dir: docs/
 repo_name: 'qtstrap/qtstrap'
