--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,27 @@
--e .
-atomicwrites==1.4.0
-attrs==20.3.0
-bleach==3.3.0
-build==0.3.1.post1
-certifi==2020.12.5
-chardet==4.0.0
+bleach==5.0.0
+build==0.7.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
 colorama==0.4.4
-docutils==0.16
-idna==2.10
-importlib-metadata==3.7.3
-iniconfig==1.1.1
-keyring==23.0.1
-packaging==20.9
-pep517==0.10.0
-pkginfo==1.7.0
-pluggy==0.13.1
-py==1.10.0
-Pygments==2.8.1
-pyparsing==2.4.7
-pytest==6.2.2
-pytest-qt==3.3.0
+commonmark==0.9.1
+docutils==0.18.1
+idna==3.3
+importlib-metadata==4.11.3
+keyring==23.5.0
+packaging==21.3
+pep517==0.12.0
+pkginfo==1.8.2
+Pygments==2.12.0
+pyparsing==3.0.8
 pywin32-ctypes==0.2.0
-readme-renderer==29.0
-requests==2.25.1
+readme-renderer==35.0
+requests==2.27.1
 requests-toolbelt==0.9.1
-rfc3986==1.4.0
-six==1.15.0
-toml==0.10.2
-tqdm==4.59.0
-twine==3.4.1
-urllib3==1.26.4
+rfc3986==2.0.0
+rich==12.3.0
+six==1.16.0
+tomli==2.0.1
+twine==4.0.0
+urllib3==1.26.9
 webencodings==0.5.1
-zipp==3.4.1
+zipp==3.8.0
