--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,6 @@ requires = [
 ]
 build-backend = 'setuptools.build_meta'
 
-[tool.setuptools_scm]
-write_to = "qtstrap/version.py"
-git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"
+# [tool.setuptools_scm]
+# write_to = "qtstrap/version.py"
+# git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"
