--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = qtstrap
-version = 0.2.5
+version = 0.2.6
 description = Like Bootstrap, but qt-er.
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
@@ -18,6 +18,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 project_urls = 
     Documentation = https://qtstrap.github.io/qtstrap/
     Source = https://github.com/qtstrap/qtstrap
