--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = qtstrap
-version = 0.2.7
+version = 0.2.8
 description = Like Bootstrap, but qt-er.
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
-url = https://github.com/dib-lab/screed
+url = https://github.com/qtstrap/qtstrap
 author = David Kincaid
 author_email = dlkincaid0@gmail.com
 license = MIT
@@ -28,16 +28,15 @@ project_urls =
 zip_safe = False
 packages = find:
 platforms = any
-include_package_data = True
+include_package_data = true
 install_requires =
     QtPy
     click
-    PyInquirer
+    inquirerpy
     appdirs
     qtawesome
     pyinstaller
-    pretty-errors
-python_requires = >=3.7
+python_requires = >=3.9, <3.11
 
 [bdist_wheel]
 universal = 1
