--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
 project_urls = 
     Documentation = https://qtstrap.github.io/qtstrap/
     Source = https://github.com/qtstrap/qtstrap
@@ -36,7 +37,7 @@ install_requires =
     appdirs
     qtawesome
     pyinstaller
-python_requires = >=3.9, <3.11
+python_requires = >=3.9
 
 [bdist_wheel]
 universal = 1
