--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ classifiers =
     Development Status :: 4 - Beta
     Operating System :: OS Independent
     Topic :: Software Development :: Widget Sets
+    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
@@ -35,7 +36,7 @@ install_requires =
     appdirs
     qtawesome
     pyinstaller
-python_requires = >=3.9
+python_requires = >=3.8
 
 [bdist_wheel]
 universal = 1
