Change tox config to prevent rebuilding envs

--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,14 @@
 [tox]
 envlist = py{39,310}-{windows}-{pyqt5,pyside2,pyqt6,pyside6}
 skip_missing_interpreters=true
-passenv = *
+skipsdist=True
 
 [testenv]
 platform =
     linux: linux
     windows: win32
 deps = 
+    -e .
     pytest
     pytest-qt
     pytest-cov
