--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = qtstrap
-version = 0.4.2
+version = 0.5.0
 description = Like Bootstrap, but qt-er.
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
@@ -31,6 +31,7 @@ platforms = any
 include_package_data = true
 install_requires =
     QtPy
+    pydantic
     click
     inquirerpy
     appdirs
