--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ build-backend = 'setuptools.build_meta'
 # write_to = "qtstrap/version.py"
 # git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"
 
+[tool.black]
+line-length = 120
+
 [tool.ruff]
 line-length = 120
 
