--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./site
           external_repository: qtstrap/qtstrap.github.io
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
