--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
 project_urls = 
-    Documentation = https://qtstrap.github.io/qtstrap/
+    Documentation = https://qtstrap.github.io/
     Source = https://github.com/qtstrap/qtstrap
     Tracker = https://github.com/qtstrap/qtstrap/issues
 
