--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,9 @@ jobs:
           python3 -m pip install mkdocs-mermaid2-plugin
           python3 -m pip install mkdocs-literate-nav
       - name: Build site
-        run: mkdocs build
+        run: |
+          python3 buiid_docs.py
+          mkdocs build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
