--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,8 @@ docs_dir: docs/
 repo_name: 'qtstrap/qtstrap'
 repo_url: 'https://github.com/qtstrap/qtstrap'
 theme:
-    name: readthedocs
+  name: readthedocs
+  custom_dir: docs_theme/
 plugins:
   - search
   - mermaid2
