Remove requirements/entry point and bump version number

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = qtstrap
-version = 0.6.2
+version = 0.6.3
 description = Like Bootstrap, but qt-er.
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
@@ -19,6 +19,7 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 project_urls = 
     Documentation = https://qtstrap.github.io/
     Source = https://github.com/qtstrap/qtstrap
@@ -31,11 +32,8 @@ platforms = any
 include_package_data = true
 install_requires =
     QtPy
-    click
-    inquirerpy
     appdirs
     qtawesome
-    pyinstaller
 python_requires = >=3.8
 
 [bdist_wheel]
@@ -44,6 +42,6 @@ universal = 1
 [aliases]
 test=pytest
 
-[options.entry_points]
-console_scripts =
-    qtstrap=qtstrap.__main__:main
+# [options.entry_points]
+# console_scripts =
+#     qtstrap=qtstrap.__main__:main
