--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "qtstrap"
-version = "0.6.4"
+version = "0.6.5"
 description = "Like Bootstrap, but qt-er."
 readme = "README.md"
 authors = [{ name = "David Kincaid", email = "daelonsuzuka@gmail.com" }]
-license = "MIT"
+license = { file = "LICENSE" }
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -13,17 +13,18 @@ classifiers = [
     "Operating System :: OS Independent",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
-requires-python = ">= 3.8"
+requires-python = ">= 3.9"
 dependencies = [
     "qtpy>=2.4.1",
     "appdirs>=1.4.4",
     "qtawesome>=1.3.1",
+    "pydantic>=2",
 ]
 
 [project.urls]
@@ -32,21 +33,17 @@ Documentation = "https://docs.qtstrap.dev"
 Repository = "https://github.com/qtstrap/qtstrap"
 Issues = "https://github.com/qtstrap/qtstrap/issues"
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.rye]
-managed = true
+[tool.uv]
+package = true
 dev-dependencies = [
     "PySide6>=6.7.0",
     "pytest>=8.3.2",
     "pytest-cov>=5.0.0",
     "pytest-qt>=4.4.0",
+    "twine",
+    "lazydocs",
 ]
 
-[tool.hatch.metadata]
-allow-direct-references = true
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/qtstrap"]
+[build-system]
+requires = ["setuptools", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
