--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "qtpy>=2.4.1",
     "appdirs>=1.4.4",
     "qtawesome>=1.3.1",
-    "pydantic>=2",
+    "pydantic>=2.9.0",
+    "pydantic-settings>=2.7.0",
 ]
 
 [project.urls]
