--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,16 @@ dependencies = [
     "pydantic-settings>=2.7.0",
 ]
 
+[dependency-groups]
+dev = [
+    "PySide6>=6.7.0",
+    "pytest>=8.3.2",
+    "pytest-cov>=5.0.0",
+    "pytest-qt>=4.4.0",
+    "twine",
+    "lazydocs",
+]
+
 [project.urls]
 Homepage = "https://github.com/qtstrap/qtstrap"
 Documentation = "https://docs.qtstrap.dev"
@@ -36,14 +46,6 @@ Issues = "https://github.com/qtstrap/qtstrap/issues"
 
 [tool.uv]
 package = true
-dev-dependencies = [
-    "PySide6>=6.7.0",
-    "pytest>=8.3.2",
-    "pytest-cov>=5.0.0",
-    "pytest-qt>=4.4.0",
-    "twine",
-    "lazydocs",
-]
 
 [tool.ruff]
 line-length = 120
